--- a/src/main/webapp/app/entities/company/company.css
+++ b/src/main/webapp/app/entities/company/company.css
@@ -16,3 +16,80 @@
     margin-bottom: 0px!important;
     border: 1px solid transparent;
 }
+
+.box-table{
+    min-height: 100px;
+}
+
+.orange{
+    padding-top: 3px;
+    background-color: #e67e22;
+    color: #fff;
+    font-weight: bold;
+    font-size: 14px;
+}
+
+.red{
+    padding-top: 3px;
+    color: #fff;
+    background-color: #e74c3c;
+    font-weight: bold;
+    font-size: 14px;
+}
+
+.yellow{
+    padding-top: 3px;
+    color: #fff;
+    background-color: #f1c40f;
+    font-weight: bold;
+    font-size: 14px;
+}
+
+.green{
+    padding-top: 3px;
+    color: #fff;
+    background-color: #2ecc71;
+    font-weight: bold;
+    font-size: 14px;
+}
+
+.asphalt{
+    padding-top: 3px;
+    color: #fff;
+    background-color: #34495e;
+}
+
+
+.white{
+    color: white;
+    text-decoration-color: white;
+}
+
+.white:hover{
+    color: white;
+    text-decoration-color: white;
+}
+
+
+
+.table > thead > tr > th, .table > thead > tr > td, .table > tbody > tr > th, .table > tbody > tr > td, .table > tfoot > tr > th, .table > tfoot > tr > td {
+    padding: 8px;
+    line-height: 1.42857;
+    vertical-align: top;
+    border-top: none!important;
+}
+
+
+.table {
+    border: 1px solid white;
+    border-collapse: collapse;
+    margin-top: -0.7em;
+}
+
+.th{
+    border: 1px solid white;
+}
+
+.td{
+    border: 1px solid white;
+}
