--- a/src/main/webapp/scss/main.scss
+++ b/src/main/webapp/scss/main.scss
@@ -1,7 +1,9 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto');
 body {
     background: #fafafa;
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-family: 'Roboto', sans-serif!important;
     color: #333;
+    font-size: 15px;
 }
 
 /* ==========================================================================
